nori-rs/tui-pty-e2e/tests/snapshots/input_handling__ctrl_c_clears.snap
---
source: tui-pty-e2e/tests/input_handling.rs
expression: normalize_for_input_snapshot(session.screen_contents())
---
› [DEFAULT_PROMPT]

  ctrl + c again to quit
