nori-rs/tui-pty-e2e/tests/snapshots/input_handling__history_navigation_up_down.snap
---
source: tui-pty-e2e/tests/input_handling.rs
expression: normalize_for_input_snapshot(session.screen_contents())
---
• Mock ACP options: Model=Mock Default Model, Thought Level=Medium (/config
to change)

› first message

• Mock response

› [DEFAULT_PROMPT]

                                                                        ⎇ master
